--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -82,8 +82,6 @@ $mode-hover-background-color-list-row-light: $light-gray-level-2;
 $mode-hover-background-color-list-row-dark: $dark-gray-level-4;
 $mode-selected-background-color-list-row-light: $light-gray-level-6;
 $mode-selected-background-color-list-row-dark: $dark-gray-level-2;
-$mode-hover-background-color-top-bar-options-dropdown-row-light: $light-gray-level-4;
-$mode-hover-background-color-top-bar-options-dropdown-row-dark: $dark-gray-level-6;
 // Light/Dark mode (specific)
 $mode-background-color-home-light: white;
 $mode-background-color-home-dark: $dark-gray-level-6;
@@ -99,6 +97,8 @@ $mode-background-color-search-filter-sort-top-bar-button-light: $mode-background
 $mode-background-color-search-filter-sort-top-bar-button-dark: $dark-gray-level-4;
 $mode-text-color-search-filter-sort-top-bar-button-light: $mode-text-color-base-light;
 $mode-text-color-search-filter-sort-top-bar-button-dark: $mode-text-color-base-dark;
+$mode-hover-background-color-top-bar-options-dropdown-row-light: $light-gray-level-4;
+$mode-hover-background-color-top-bar-options-dropdown-row-dark: $dark-gray-level-3;
 $mode-background-color-create-item-sidebar-light: $mode-background-color-home-light;
 $mode-background-color-create-item-sidebar-dark: $mode-background-color-home-dark;
 $mode-text-color-base-icon-button-light: $gray-level-2;
