--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1706,6 +1706,7 @@ dropdown can overlap all other components
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
+  background-color: white;
   box-shadow: 0 1px 0 #919191;
   width: 275px;
 }
@@ -2522,6 +2523,7 @@ dropdown can overlap all other components
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
+  background-color: white;
   box-shadow: 0 1px 0 #919191;
   width: 300px;
 }
@@ -2744,6 +2746,24 @@ body .js-set-bar-button-border-background-text-color-dark-mode-true,
   background-color: #3a3a3a;
   color: #C9D1D9;
 }
+html .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:hover, html .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:active,
+body .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:hover,
+body .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:active,
+.app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:hover,
+.app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:active,
+.js-calc-app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:hover,
+.js-calc-app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-false:active {
+  background-color: #ebebeb;
+}
+html .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:hover, html .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:active,
+body .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:hover,
+body .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:active,
+.app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:hover,
+.app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:active,
+.js-calc-app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:hover,
+.js-calc-app-component .js-set-top-bar-options-dropdown-row-hover-background-color-dark-mode-true:active {
+  background-color: #444444;
+}
 html .js-set-create-item-sidebar-background-color-dark-mode-false,
 body .js-set-create-item-sidebar-background-color-dark-mode-false,
 .app-component .js-set-create-item-sidebar-background-color-dark-mode-false,
@@ -2816,18 +2836,18 @@ body .js-set-more-distinct-icon-button-background-color-with-hover-dark-mode-tru
 .js-calc-app-component .js-set-more-distinct-icon-button-background-color-with-hover-dark-mode-true:active {
   color: #757575;
 }
-html .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-false,
-body .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-false,
-.app-component .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-false,
-.js-calc-app-component .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-false {
+html .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-false,
+body .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-false,
+.app-component .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-false,
+.js-calc-app-component .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-false {
   border-color: black;
   background-color: white;
   color: #3a3a3a;
 }
-html .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-true,
-body .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-true,
-.app-component .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-true,
-.js-calc-app-component .js-set-item-view-options-button-clicked-border-background-text-color-dark-mode-true {
+html .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-true,
+body .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-true,
+.app-component .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-true,
+.js-calc-app-component .js-set-top-bar-options-button-clicked-border-background-text-color-dark-mode-true {
   border-color: #a3a3a3;
   background-color: #3a3a3a;
   color: #757575;
